--- a/appsrv/pom.xml
+++ b/appsrv/pom.xml
@@ -95,7 +95,22 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
-    </dependencies>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-csv</artifactId>
+      <version>2.11.3</version>
+    </dependency>
+      <dependency>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-core</artifactId>
+          <version>1.10.5.Final</version>
+      </dependency>
+      <dependency>
+          <groupId>com.opencsv</groupId>
+          <artifactId>opencsv</artifactId>
+          <version>5.3</version>
+      </dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
