--- a/appsrv/pom.xml
+++ b/appsrv/pom.xml
@@ -110,6 +110,10 @@
           <artifactId>opencsv</artifactId>
           <version>5.3</version>
       </dependency>
+      <dependency>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-core</artifactId>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
